@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: gtkboard.c,v 1.154 2003/10/28 12:01:44 Superfly_Jon Exp $
+ * $Id: gtkboard.c,v 1.155 2003/11/24 10:20:56 Superfly_Jon Exp $
  */
 
 #if HAVE_CONFIG_H
@@ -3514,6 +3514,7 @@ static void board_init( Board *board ) {
 #if USE_BOARD3D
 	/* 3d board drawing area */
 	CreateBoard3d(bd, &bd->drawing_area3d);
+	InitBoardData(bd);
 	gtk_container_add(GTK_CONTAINER(board), bd->drawing_area3d);
 #endif
 
@@ -4010,20 +4011,19 @@ extern GtkWidget *board_dice_widget( Board *board ) {
 #if USE_BOARD3D
 void InitBoardData(BoardData* bd)
 {	/* Initialize some BoardData settings on new game start */
+	/* Move cube back to center */
+	bd->cube = 0;
+	bd->cube_owner = 0;
+	bd->doubled = 0;
+
+	bd->resigned = 0;
+
+	/* Set dice so 3d roll happens */
+	bd->diceShown = DICE_NOT_SHOWN;
+	bd->diceRoll[0] = bd->diceRoll[1] = -1;
 	/* Only needed for 3d board */
 	if (rdAppearance.fDisplayType == DT_3D)
 	{
-		/* Move cube back to center */
-		bd->cube = 0;
-		bd->cube_owner = 0;
-		bd->doubled = 0;
-
-		bd->resigned = 0;
-
-		/* Set dice so 3d roll happens */
-		bd->diceShown = DICE_NOT_SHOWN;
-		bd->diceRoll[0] = bd->diceRoll[1] = -1;
-
 		updateOccPos(bd);
 		updateFlagOccPos(bd);
 		SetupViewingVolume3d(bd, &rdAppearance);
